--- a/src/ProjetoMVC02.Presentation/appsettings.json
+++ b/src/ProjetoMVC02.Presentation/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "ProjetoMVC02": "Data Source=SEN13166;Initial Catalog=BD_ProjetoMVC02;Integrated Security=True;TrustServerCertificate=True"
+    "ProjetoMVC02": "Data Source=LEOCAMPOS;Initial Catalog=BD_ProjetoMVC02;Integrated Security=True;TrustServerCertificate=True"
   }
 }
